--- a/package.json
+++ b/package.json
@@ -2,16 +2,26 @@
   "name": "platzi-badges",
   "version": "0.1.0",
   "private": true,
-  "dependencies": {
-    "react": "^16.8.6",
-    "react-dom": "^16.8.6",
-    "react-scripts": "3.0.1"
-  },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all -p client server",
+    "client": "react-scripts start",
+    "server": "json-server --port 3001 --watch server/db.json",
+    "seed": "node server/seed.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+  },
+  "dependencies": {
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6",
+    "react-scripts": "3.0.1",
+    "react-router-dom": "4.3.1",
+    "bootstrap": "4.3.1"
+  },
+  "devDependencies": {
+    "faker": "^4.1.0",
+    "json-server": "^0.14.2",
+    "npm-run-all": "^4.1.5"
   },
   "eslintConfig": {
     "extends": "react-app"
